--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -1,3 +1,6 @@
 @import url(color.css);
 @import url(input.css);
 @import url(theme.css);
+@import url(droparea.css);
+@import url(checkbox.css);
+@import url(buttons.css);
